# strela

./: .gitmodules  CMakeLists.txt  main.cpp
